--- a/generic.html
+++ b/generic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>Mon parcour</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="CSS/main.css" />
@@ -15,7 +15,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
+						<li><a href="generic.html" class="active">Mon parcour</a></li>
 					</ul>
 				</nav>
 			</header>
