--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                                 <input type="text" name="email" id="email">
                                             </div>
                                             <div class="field half">
-                                                <label for="message">Message/label>
+                                                <label for="message">Message<label>
                                                 <textarea name="message" id="message" rows="5"></textarea>
                                             </div>
                                         </div>
