--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <section id="intro" class="wrapper style1">
                         <div class="inner">
                             <h1>Introduction</h1>
-                            <p>Bonjour ! Je m'appelle Jordan OSTIN et je suis actuellement en formation sur le dispositif Prépa Rebond de l’Association Envol pour définir mon projet professionnel, j’effectue des immersions.
+                            <p>Bonjour ! Je m'appelle Jordan OSTIN et je suis actuellement en formation sur le dispositif Prépa Rebond de l’Association Envol pour définir mon projet professionnel qui est de devenir développeur web.
                                 Durant mon expérience en tant que programmeur dans le game design à l’école Poly3D (école du numérique et du jeux vidéo en Polynésie française), j’ai pu participer à plusieurs projets de groupe dans la conception de jeux vidéo.
                                 Le langage que j’utilise est le blueprint que j’ai appris en autodidacte. Soif d’apprendre, je m'autoforme à l’HTML, le CSS, le Javascript, le PHP et le SQL.
                             </p>
@@ -44,10 +44,43 @@
                 <!--CV-->
                     <section id="cv" class="wrapper style2">
                         <section>
-                            <h2><strong>Curriculum Vitæ</strong></h2>
-                            <ul>
-                                <li><a href="generic.html" class="button">Savoir plus</a></li>
-                            </ul>
+                            <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center"></a>
+                            <div class="content">
+                                <div class="inner">
+                                    <h2><strong>Mon parcour proféssionnel</strong></h2>
+                                        <ul>
+                                            <li><a href="generic.html" class="button">Voir</a></li>
+                                        </ul>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
+
+                    <section id="cv" class="wrapper style2">
+                        <section>
+                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="center center"></a>
+                            <div class="content">
+                                <div class="inner">
+                                    <h2><strong>Ma scolarité</strong></h2>
+                                    <ul>
+                                        <li><a href="scolarité.html" class="button">Voir</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </section>
+                    </section>
+
+                    <section id="cv" class="wrapper style2">
+                        <section>
+                            <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center"></a>
+                            <div class="content">
+                                <div class="inner">
+                                    <h2><strong>Diplôme(s)</strong></h2>
+                                    <ul>
+                                        <li><a href="diplome.html" class="button">Voir</a></li>
+                                    </ul>
+                                </div>
+                            </div>
                         </section>
                     </section>
 
