--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <li><a href="#Intro">Introduction</a></li>
                             <li><a href="#cv">Curriculum Vitæ</a></li>
                             <li><a href="#sur_moi">À savoir sur moi</a></li>
-                            <li><a href="#contact">Me contacter</a></li>
+                            <li><a href="#three">Me contacter</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -28,7 +28,7 @@
             <div id="wrapper">
 
                 <!-- Intro-->
-                    <section id="intro" class="wrapper style1">
+                    <section id="intro" class="wrapper style1 fullscreen fade-up">
                         <div class="inner">
                             <h1>Introduction</h1>
                             <p>Bonjour ! Je m'appelle Jordan OSTIN et je suis actuellement en formation sur le dispositif Prépa Rebond de l’Association Envol pour définir mon projet professionnel qui est de devenir développeur web.
@@ -42,7 +42,7 @@
                     </section>
                 
                 <!--CV-->
-                    <section id="cv" class="wrapper style2">
+                    <section id="cv" class="wrapper style2 spotlights">
                         <section>
                             <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center"></a>
                             <div class="content">
@@ -54,9 +54,7 @@
                                 </div>
                             </div>
                         </section>
-                    </section>
 
-                    <section id="cv" class="wrapper style2">
                         <section>
                             <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="center center"></a>
                             <div class="content">
@@ -68,9 +66,7 @@
                                 </div>
                             </div>
                         </section>
-                    </section>
 
-                    <section id="cv" class="wrapper style2">
                         <section>
                             <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center"></a>
                             <div class="content">
@@ -83,9 +79,9 @@
                             </div>
                         </section>
                     </section>
-
+                    
                 <!-- Sur moi-->
-                    <section id="sur_moi" class="wrapper style3">
+                    <section id="sur_moi" class="wrapper style3 fade-up">
                         <div class="inner">
                             <h2><strong>À savoir sur moi</strong></h2>
                             <div class="features">
@@ -125,7 +121,7 @@
                     </section>
 
                 <!-- Me contacter -->
-                    <section id="tree" class="wrapper style1">
+                    <section id="three" class="wrapper style1 fade-up">
                         <div class="inner">
                             <h2>Merci !</h2>
                             <p>Je vous laisse ci-dessous mes coordoner et un formulaire pour 
