--- a/diplome.html
+++ b/diplome.html
@@ -14,7 +14,7 @@
 				<a href="index.html" class="title">Jordan OSTIN</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">Accueil</a></li>
 						<li><a href="generic.html" class="active">Mon parcour</a></li>
                         <li><a href="scolarité.html" class="active">Ma scolarité</a></li>
                         <li><a href="diplome.html" class="active">Diplôme(s)</a></li>
