--- a/diplome.html
+++ b/diplome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Mon parcour</title>
+		<title>Diplôme(s)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="CSS/main.css" />
@@ -14,10 +14,9 @@
 				<a href="index.html" class="title">Jordan OSTIN</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Accueil</a></li>
+						<li><a href="index.html" class="active">Accueil</a></li>
 						<li><a href="generic.html" class="active">Mon parcour</a></li>
                         <li><a href="scolarité.html" class="active">Ma scolarité</a></li>
-                        <li><a href="diplome.html" class="active">Diplôme(s)</a></li>
 					</ul>
 				</nav>
 			</header>
