--- a/generic.html
+++ b/generic.html
@@ -14,8 +14,9 @@
 				<a href="index.html" class="title">Jordan OSTIN</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Accueil</a></li>
-						<li><a href="generic.html" class="active">Mon parcour</a></li>
+						<li><a href="index.html" class="active">Accueil</a></li>
+                        <li><a href="scolarité.html" class="active">Ma scolarité</a></li>
+                        <li><a href="diplome.html" class="active">Diplôme(s)</a></li>
 					</ul>
 				</nav>
 			</header>
