--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
             <div id="wrapper">
 
                 <!-- Intro-->
-                    <section id="intro" class="wrapper style1 fullscreen fade-up">
+                    <section id="Intro" class="wrapper style1 fullscreen fade-up">
                         <div class="inner">
                             <h1>Introduction</h1>
                             <p>Bonjour ! Je m'appelle Jordan OSTIN et je suis actuellement en formation sur le dispositif Prépa Rebond de l’Association Envol pour définir mon projet professionnel qui est de devenir développeur web.
                                 Durant mon expérience en tant que programmeur dans le game design à l’école Poly3D (école du numérique et du jeux vidéo en Polynésie française), j’ai pu participer à plusieurs projets de groupe dans la conception de jeux vidéo.
                                 Le langage que j’utilise est le blueprint que j’ai appris en autodidacte. Soif d’apprendre, je m'autoforme à l’HTML, le CSS, le Javascript, le PHP et le SQL.
                             </p>
-                            <ul class="action">
+                            <ul class="actions">
                                 <li><a href="#cv" class="button scrolly">Suivant</a></li>
                             </ul>
                         </div>
@@ -48,7 +48,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Mon parcour proféssionnel</strong></h2>
-                                        <ul>
+                                        <ul class="actions">
                                             <li><a href="generic.html" class="button">Voir</a></li>
                                         </ul>
                                 </div>
@@ -60,7 +60,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Ma scolarité</strong></h2>
-                                    <ul>
+                                    <ul class="actions">
                                         <li><a href="scolarité.html" class="button">Voir</a></li>
                                     </ul>
                                 </div>
@@ -72,7 +72,7 @@
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Diplôme(s)</strong></h2>
-                                    <ul>
+                                    <ul class="actions">
                                         <li><a href="diplome.html" class="button">Voir</a></li>
                                     </ul>
                                 </div>
@@ -86,6 +86,7 @@
                             <h2><strong>À savoir sur moi</strong></h2>
                             <div class="features">
                                 <section>
+                                    <span class=" icon solid major fa-code"></span>
                                     <h3>Mes compétences</h3>
                                     <p>
                                         <ul>
@@ -97,6 +98,7 @@
                                     </p>
                                 </section>
                                 <section>
+                                    <span class=" icon solid major fa-code"></span>
                                     <h3>Logieciels utilisés</h3>
                                     <p>
                                         <ul>
@@ -107,6 +109,7 @@
                                     </p>
                                 </section>
                                 <section>
+                                    <span class=" icon solid major fa-code"></span>
                                     <h3>Loisirs</h3>
                                     <p>
                                         <ul>
