--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!--CV-->
                     <section id="cv" class="wrapper style2 spotlights">
                         <section>
-                            <a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center"></a>
+                            <a href="#cv" class="image"><img src="images/pic01.jpg" alt="" data-position="center center"></a>
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Mon parcour proféssionnel</strong></h2>
@@ -56,7 +56,7 @@
                         </section>
 
                         <section>
-                            <a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="center center"></a>
+                            <a href="#cv" class="image"><img src="images/pic02.jpg" alt="" data-position="center center"></a>
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Ma scolarité</strong></h2>
@@ -68,7 +68,7 @@
                         </section>
 
                         <section>
-                            <a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="center center"></a>
+                            <a href="#cv" class="image"><img src="images/pic03.jpg" alt="" data-position="center center"></a>
                             <div class="content">
                                 <div class="inner">
                                     <h2><strong>Diplôme(s)</strong></h2>
