--- a/index.html
+++ b/index.html
@@ -183,5 +183,7 @@
                     </ul>
                 </div>
             </footer>
+        <!-- script -->
+        <script src="script1.js"></script>
     </body>
 </html>
