--- a/index.html
+++ b/index.html
@@ -184,6 +184,8 @@
                 </div>
             </footer>
         <!-- script -->
-        <script src="script1.js"></script>
+        <script src="javascript/main.js"></script>
+        <script src="javascript/util.js"></script>
+        <script src="javascript/breakpoints.js"></script>
     </body>
 </html>
